# equipment-failure-prediction

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  dependencies.py  main.py
api/controllers/: health_controller.py  predict_controller.py  train_controller.py
api/dependencies/: model_dependencies.py
api/domain/: entities.py
api/repositories/: model_repository.py
api/routes/: health.py  predict.py  train.py
api/services/: inference_service.py  training_service.py
api/utils/: feature_engineering.py  sequence_utils.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
streamlit_app/: Dockerfile  app.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/controllers/: test_predict_controller.py
tests/unit/repositories/: test_model_repository.py
tests/unit/services/: test_inference_service.py  test_training_service.py
tests/unit/utils/: test_feature_engineering.py  test_sequence_utils.py
training/: train_model.py
training/artifacts/: metadata.pkl  model.cbm  scaler.pkl
training/pipelines/: data_pipeline.py  training_pipeline.py
